fix various responsive layout bugs, shrink soundcloud player, etc.

--- a/css/base.css
+++ b/css/base.css
@@ -1,4 +1,4 @@
-@import url("http://fonts.googleapis.com/css?family=Lato:100,300,400,700,900");
+
 
 * {
   box-sizing: border-box;
@@ -18,11 +18,11 @@ h1{
 }
 
 img{
-  max-width: 79vmin;
-  max-height: 79vmin;
+  max-width: 60vmin;
+  max-height: 60vmin;
   margin-left: auto;
   margin-right: auto;
-  margin-top: 5vh;
+  margin-top: 2vh;
 }
 
 ul,
@@ -48,12 +48,15 @@ a {
 
 .row{
   flex: 1;
+  flex-direction: row;
 }
 
 #bio-pic{
-  display: block;
+  display: flex;
+  float: left;
+  padding-right: 30px;
   max-width: 300px;
-  margin-top: 0;
+  margin-top: 20px;
   margin-right: auto;
   margin-left: auto;
 }
@@ -72,12 +75,15 @@ a {
 /* --------------------------
   Media Queries
 --------------------------- */
-
+@media (max-width: 800px){
+  .page-content{
+    /*clear footer nav*/
+    margin-bottom: 250px;
+  }
+}
 
 @media (min-width: 769px) {
-	.main-content {
-		margin-top: 4em;
-	}
+
 	p {
 		-webkit-column-count: 1;
 		-webkit-column-gap: 2.5em;
@@ -88,7 +94,8 @@ a {
 		column-count: 1; column-gap: 2.5em;
 	}
   .page-content{
-    margin-top: 16vh;
+    margin-top: 1vh;
+    margin-bottom: 200px;
   }
   .contact-page-content{
     margin-top: 16vh;
@@ -106,9 +113,10 @@ a {
 		width: 1200px;
 	}
   img {
-    max-width: 1000px;
-    max-height: 1000px;
+    max-width: 600px;
+    max-height: 70vh;
   }
+
 }
 /*slider dots*/
 .slick-dots{
